--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <body>
 
-  <h1>SlideWiki WebRTC</h1>
-
+  <iframe id="slidewikiPresentation" src="http://localhost:3000/Presentation/3-1/#/slide-36-2-0" height="850px" width="100%" frameborder="0" style="border:0"></iframe>
+  <button id="resumeRemoteControl" style="display: none;">Resume Remote Control</button>
   <div id="videos">
   </div>
 
