Added better resume button and first attempt towards forwarding keydown events

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
   <iframe id="slidewikiPresentation" src="http://localhost:3000/Presentation/3-1/#/slide-36-2-0" height="850px" width="100%" frameborder="0" style="border:0"></iframe>
-  <button id="resumeRemoteControl" style="display: none;">Resume Remote Control</button>
+  <button id="resumeRemoteControl" class="float" style="display: none;">Resume</button>
   <div id="videos">
   </div>
 
