Added Sweetalert and translated comments

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <title>SlideWiki WebRTC</title>
 
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.6/sweetalert2.min.css" />
 
 </head>
 
@@ -29,6 +30,7 @@
 
   <script src="https://webrtc.github.io/adapter/adapter-4.2.0.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.6/sweetalert2.min.js"></script>
   <script src="js/main.js"></script>
 
 </body>
