Fixed audio playback

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <iframe id="slidewikiPresentation" src="http://localhost:3000/Presentation/3-1/#/slide-36-2-0" height="850px" width="100%" frameborder="0" style="border:0"></iframe>
   <p><span id="roleText"></span> <span id="peerCounterText"></span><span id="peerCounter"></span></p>
   <button id="resumeRemoteControl" class="float" style="display: none;">Resume</button>
-  <!--<div id="videos">
-  </div>-->
+  <div id="videos">
+  </div>
 
   <script src="/socket.io/socket.io.js"></script>
 
